# japan-ir-search

./: .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
docs/landing/: README.md  index.html  robots.txt  sitemap.xml
scripts/: daily_update.sh  fly_daily_update.sh  make_ogp.py  rebuild_full.py  rebuild_month.py  run_rebuild.sh  test_listed.py  test_pipeline.py
src/japan_ir_search/: __init__.py  builder.py  cli.py  config.py  edinet_client.py  extractor.py  index.py  server.py
