[project]
name = "japan-ir-search"
version = "0.1.0"
description = "Full-text search MCP server for Japanese securities filings (EDINET)"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Murata Nobufumi", email = "Murata-Nobufumi@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27",
    "lxml>=5.0",
    "click>=8.0",
]

[project.scripts]
japan-ir-search = "japan_ir_search.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
